# pythonplayground

./: day01.py  day03.py  day05_1.py  pyproject.toml  requirements.txt
src/pythonplayground/: day02.py  day02_minis.py  day03.py  day04.py  day05.py  day05_highscore_utils.py  day05_mini_number_guess.py  day06.py  day07.py  day08.py  day09.py  day09_1.py  day13.py  day14.py  day15.py  day15_1.py  day15_1_2.py  day16.py  day17.py  day17_hello.py  day18.py  day18_1.py  day19.py  day20.py  day21.py  day21_1.py  day22.py  day23.py  day24.py  day25.py  day26.py  day27.py  day28.py  day29.py  day30.py  day31.py  day31_2.py  day32_tourtle.py  day33_tourtle_solarsystem.py  day34_tourtle_solarsystem.py
src/pythonplayground/crawler/: ArticleFetcher.py  CrawledArticle.py  __init__.py
src/pythonplayground/example_files/: csv_datei.csv  datei.csv  day05_mini_number_guess_highscore.csv  lesen.txt
src/pythonplayground/example_files/subfolder/: myfile.txt
src/pythonplayground/folder_as_a_module/: __init__.py  myfile.py
src/pythonplayground/ollama/: chat.py  chatbot.py  generate.py  generate_multidodal.py  project.py
src/pythonplayground/ollama/birds/: birds.csv
src/pythonplayground/quizzes/: README.md  quizz_01.py
src/pythonplayground/solar_system/: Galaxy.py  Planet.py  __init__.py  planets.json
src/pythonplayground/solar_system_v2/: Galaxy.py  Planet.py  __init__.py  planets.json
src/pythonplayground/utils/: colors.py
tests/: test_day05_1.py
