[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pythonplayground"
version = "0.1.0"
description = "Mein Lernprojekt für Python"
authors = [{ name = "Digitaluselessbox", email = "info@digitaluselessbox.com" }]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]